--- a/ProyectoFinal/nbproject/project.properties
+++ b/ProyectoFinal/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoFinalProgramacion2
+application.vendor=Yasm\u00edn
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,17 +25,20 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProyectoFinal.jar
+dist.jar=${dist.dir}/ProyectoFinalProgramacion2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=/usr/local/netbeans-8.0/java/modules/ext/AbsoluteLayout.jar
-file.reference.mysql-connector-java-5.1.39-bin.jar=/datos/local/ylagorebollar/Desktop/mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
+file.reference.AbsoluteLayout.jar-1=C:\\Program Files\\NetBeans 8.0.2\\java\\modules\\ext\\AbsoluteLayout.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Yasm\u00edn\\Desktop\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar-1=C:\\Users\\Yasm\u00edn\\Downloads\\mysql-connector-java-5.1.39-bin.jar
 file.reference.ProyectoFinalProgramacion-src=../src
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,11 +62,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.yasmin.proyectofinalprogramacion.ProyectoFinalProgramacion
+main.class=com.yasmin.proyectofinalprogramacion2.ProyectoFinalProgramacion2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
