--- a/ProyectoFinal/nbproject/project.properties
+++ b/ProyectoFinal/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar-1=C:\\Program Files\\NetBeans 8.0.2\\java\\modules\\ext\\AbsoluteLayout.jar
+file.reference.AutoCompleter.jar=..\\AutoCompleter.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Yasm\u00edn\\Desktop\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar-1=C:\\Users\\Yasm\u00edn\\Downloads\\mysql-connector-java-5.1.39-bin.jar
 file.reference.ProyectoFinalProgramacion-src=../src
@@ -38,7 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.AbsoluteLayout.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.AutoCompleter.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
